<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">网速测试</string>
    <string name="app_version_name">版本：1.6.1</string>
    <string name="app_recommand">上网快鸟</string>
    <string name="company_name">晨风云（北京）科技有限公司</string>
    <string name="company_website">公司网址</string>
    <string name="website">www.quickbird.com</string>
    <string name="email">support@quickbird.com</string>
    <string name="phone">010-57525200</string>
    <string name="company_email">客服邮箱</string>
    <string name="company_phone">客服电话</string>
    <string name="company_recommand">友情推荐</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="image_content_description">TestSpeed</string>
    <string name="testspeed_max_level">网络速度等级:</string>
    <string name="testspeed_refresh">重试，网络可能存在问题。</string>
    <string name="location">正在定位中</string>
    <string name="find_nearest_server">寻找最近的服务器</string>
    <string name="set_network">设置网络</string>

    <!-- tab_文字 -->
    <string name="testspeed_title">网络测速</string>
    <string name="tab_web">测网站</string>
    <string name="tab_history">历史</string>
    <string name="tab_testspeed">测网速</string>
    <string name="tab_more">更多</string>

    <!-- 测速文字 -->
    <string name="testspeed_ping">延迟 : </string>
    <string name="testspeed_network">网络 : </string>
    <string name="testspeed_test_twice">重新测速</string>
    <string name="testspeed_no_network_prompt">设置中开启网络，当前未联网。</string>
    <string name="testspeed_connecting">正在连接服务器...</string>
    <string name="testspeed_helpfulhints">友情提示</string>
    <string name="testspeed_alert_prompt">测试网速将会耗费您一点流量，是否继续？</string>
    <string name="testspeed_netwokwrong">哎呀，网络连接失败了！</string>
    <string name="testspeed_yes">是</string>
    <string name="testspeed_postive">确定</string>
    <string name="testspeed_negtive">否</string>
    <string name="testspeed_prompt">提示</string>
    <string name="testspeed_networknotgood">当前网络不可用，请稍后再试</string>
    <string name="testspeed_stop">终止本次测速，测速即将结束。</string>
    <string name="testspeed_network_state1">None</string>
    <string name="testspeed_network_state2">Wi-Fi</string>
    <string name="testspeed_network_state3">2G/3G</string>
    <string name="testspeed_over">测速完毕</string>
    <string name="testspeed_speed">速度</string>
    <string name="testspeed_result_1">纸飞机速度</string>
    <string name="testspeed_result_2">战斗机速度</string>
    <string name="testspeed_result_3">火箭速度</string>
    <string name="testspeed_kb">kB/s</string>
    <string name="testspeed_0">0</string>
    <string name="testspeed_1">1</string>
    <string name="testspeed_2">2</string>
    <string name="testspeed_3">3</string>
    <string name="testspeed_4">4</string>
    <string name="testspeed_5">5</string>
    <string name="testspeed_6">6</string>
    <string name="testspeed_again">重新测速</string>
    <string name="testspeed_result_info">您的网络速度</string>
    <string name="speed_unit_kb">KB/s</string>
    <string name="speed_unit_mb">MB/s</string>

    <!-- 历史文字 -->
    <string name="history_num">已进行%1$s次测速</string>
    <string name="history_networktype">网络</string>
    <string name="history_date">日期</string>
    <string name="history_latency">时延</string>
    <string name="history_speed">网速</string>
    <string name="history_medal">勋章</string>
    <string name="average_speed">平均速度：</string>
    <string name="max_speed">最高速度：</string>
    <string name="min_speed">最低速度：</string>
    <string name="notify_title">上网快鸟提醒您</string>
    <string name="notify_ok">确定</string>
    <string name="notify_yes">确认</string>
    <string name="notify_cancel">取消</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
    <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="weibosdk_comment">评论</string>
    <string name="weibosdk_forward">转发</string>
    <string name="weibosdk_fav">收藏</string>
    <string name="umeng_share_shareto_top">选择分享方式</string>
    <string name="umeng_share_shareto_renr">人人网</string>
    <string name="umeng_share_shareto_sina">新浪微博</string>
    <string name="umeng_share_shareto_tenc">腾讯微博</string>
    <string name="umeng_share_shareto_weixin">微信好友</string>
    <string name="umeng_share_shareto_weixinsession">朋友圈</string>
    <string name="umeng_share_shareto_qzone">QQ空间</string>
    <string name="umeng_share_shareto_kaixin">开心网</string>
    <string name="history_no_result1">一次测速也没有还好意思来找人家，</string>
    <string name="history_no_result2">赶快测速一次再来查看吧！</string>
    <string name="history_start_test">开始测速</string>
    <string name="history_delete_prompt">您确定要删除所有历史记录吗？</string>

    <!-- 历史详情 -->
    <string name="detail_score">测速成绩：</string>
    <string name="detail_result">测速结果</string>
    <string name="detail_location">地理信息</string>
    <string name="detail_rank">测速排名</string>
    <string name="detail_network">网络类型：</string>
    <string name="detail_date">测速时间：</string>
    <string name="detail_ping">连接服务器时间：</string>
    <string name="detail_speed">网速：</string>
    <string name="detail_rank_str">排名%1$d位</string>

    <!-- 测速结果 -->
    <string name="speedresult_speed">您当前的网络速度是%1$s</string>
    <string name="speedresult_medal">在最近测速的1000人中，</string>
    <string name="speedresult_beat">您的网速击败了%1$d人，特授予你：</string>
    <string name="speedresult_return">返回</string>
    <string name="speedresult_share">分享</string>

    <!-- 更多 -->
    <string name="more_network_set">设置网络</string>
    <string name="more_traffic_gift">流量礼品盒</string>
    <string name="more_history">测速历史</string>
    <string name="more_account_tie">账号绑定</string>
    <string name="more_update_check">检查更新</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_company_about">关于</string>
    <string name="account_tie">账号绑定：</string>
    <string name="account_weibo">新浪微博账号</string>
    <string name="account_tecent">腾讯微博账号</string>
    <string name="setting_network">设置网络：</string>
    <string name="setting_wifi">无线网络</string>
    <string name="setting_gprs">移动网络</string>
    <string name="setting_data">数据接入方式</string>

    <!-- 网站测速 -->
    <string name="website_custom_str">常用</string>
    <string name="website_social_str">社交</string>
    <string name="website_shopping_str">购物</string>
    <string name="website_video_str">视频</string>

    <!-- 分享 -->
    <string name="share">网速分享</string>
    <string name="share_content_mobile">亲，你有你的概念，我有我的标准；你只看到标榜的“3G”，但是否真的体会到上网的快感？请用网速测试！猛击下载http://dl.quickbird.com/android/QB_Speed.apk</string>
    <string name="share_content_wifi">您的带宽是2M,3M还是10M，用网速测试一目了然；猛击下载http://dl.quickbird.com/android/QB_Speed.apk</string>
    <string name="cancel">取消</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="evenote_title">这是一个神奇的SDK</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="qzone">QQ空间</string>
    <string name="douban">豆瓣</string>
    <string name="evernote">印象笔记</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="wechat">微信好友</string>
    <string name="shortmessage">信息</string>
    <string name="share_to">分享到</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_canceled">分享已取消</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="not_yet_authorized">尚未授权</string>

</resources>