<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_delete_popup"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_delete_popup"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                style="@style/DialogText.Title"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="删除历史记录"
                android:textColor="@color/solid_white"
                android:textSize="20dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/message"
                style="@style/DialogText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:minHeight="70dp"
                android:text="@string/history_delete_prompt"
                android:textColor="@color/text_black"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveAlertBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_selector"
                android:text="@string/notify_ok"
                android:textColor="@color/text_wihte"
                android:textSize="17sp" />

            <Button
                android:id="@+id/negativeAlertBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_selector"
                android:text="@string/notify_cancel"
                android:textColor="@color/text_wihte"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>